@@ -1,6 +1,6 @@
-DIST ncompress-4.2.4.2.tar.gz 32978 RMD160 5d35bdfd7fea51a8ff20c7ee2d4897eaafe45b37 SHA1 8f135bb2f8985768acc0a688832f02d47458c130 SHA256 38158c792b769fe23c74f8d3ea0e27569a9b1d21b53a4faf8acbb1ac03743221
 DIST ncompress-4.2.4.3.tar.gz 32473 RMD160 c80da60736495a298043a3d393e8e7ed507ca515 SHA1 6c891a173d17c1fa78402048bee8f24700148c12 SHA256 d410210742ee85470135b1d49dad17086d4e2565b3914a83dc6e0b1e588f84f8
-EBUILD ncompress-4.2.4.2.ebuild 947 RMD160 f4762b08b989241d8d6fec982adfed2c8f972fb3 SHA1 68db6bb957051708a8b8233457ab7a37e86be1ed SHA256 058aa0ff546877f7ce528c2bc485025f06c6a31c0f8ce60f1280308c0c9e3db3
+DIST ncompress-4.2.4.4.tar.gz 32571 RMD160 7c7070c47242f9c7a2aa3594cde94df955a4c402 SHA1 5f43cc6cfe5f70a8a58fdcf0fc40f4ab2168ee2f SHA256 b00ba28d3f332b38aa75478a15c1b789957aa6c02d6453471f452c0ec3e6517a
 EBUILD ncompress-4.2.4.3.ebuild 782 RMD160 616ed61f1e49d9a53b9c7ee65db0d2e5c4459ebe SHA1 01b6a4f78641b039eac5992cd95921257f2fa42a SHA256 5abb27dda05f013da0d73e17887f5f3fb9775090b1b8535eba30ef3e66cfee35
-MISC ChangeLog 5340 RMD160 370a483e9ef2f4f542ce28fe636109e89036c1e2 SHA1 d74ed3695f34fb6175efacd45a06a479ea925a31 SHA256 849e1e62778034b35b8b3665dbd928d666d8152434a4c959ab6eae6f6654faf9
+EBUILD ncompress-4.2.4.4.ebuild 781 RMD160 ded341c199ca09ee31d8a0fe482b87f108466c5f SHA1 ec37924768a899aff7d274ee84343cb9188af497 SHA256 024ac726668d15549b7b1b8fa324e55619e6147ced84033c58e8f6f0d9432ff4
+MISC ChangeLog 5467 RMD160 683fbd6d5b9907bc6418718e180a7ad374d7ac36 SHA1 ac50c3c5b9de9d8627c1d8dc8f8051abc10da0ef SHA256 b33198cf761b81693f1055830bc02348c14ddcb36dbb7fbb592a04840cc15042
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
